examples/test/testpolicy2984.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2984
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key49: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value0
      podSelector:
        matchLabels:
          key7: value11
          key46: value22
          key5: value48
